more work on new zeek log types

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -1048,6 +1048,34 @@ filter {
       }
     }
 
+  } else if ([source] == "known_modbus") {
+    #############################################################################################################################
+    # known_modbus.log
+    # https://docs.zeek.org/en/stable/scripts/policy/protocols/modbus/known-masters-slaves.zeek.html#type-Known::ModbusInfo
+
+    dissect {
+      id => "dissect_zeek_known_modbus"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][device_type]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_known_modbus"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_known_modbus"
+        init => "$zeek_known_modbus_field_names = [ 'ts', 'orig_h', 'device_type' ]"
+        code => "event.set('[zeek_cols]', $zeek_known_modbus_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate { id => "mutate_gsub_zeek_known_modbus_device_type"
+             gsub => [ "[zeek_cols][device_type]", "Known::", "" ] }
+
   } else if ([source] == "known_services") {
     #############################################################################################################################
     # known_services.log
@@ -1080,7 +1108,6 @@ filter {
     #############################################################################################################################
     # modbus.log
     # https://docs.zeek.org/en/stable/scripts/base/protocols/modbus/main.zeek.html#type-Modbus::Info
-    # todo: check out this: https://docs.zeek.org/en/stable/scripts/policy/protocols/modbus/track-memmap.zeek.html#type-Modbus::MemmapInfo
 
     dissect {
       id => "dissect_zeek_modbus"
@@ -1109,11 +1136,42 @@ filter {
       }
     }
 
+  } else if ([source] == "modbus_register_change") {
+    #############################################################################################################################
+    # modbus_register_change.log
+    # https://docs.zeek.org/en/stable/scripts/policy/protocols/modbus/track-memmap.zeek.html#type-Modbus::MemmapInfo
+
+    dissect {
+      id => "dissect_zeek_modbus_register_change"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][register]}	%{[zeek_cols][old_val]}	%{[zeek_cols][new_val]}	%{[zeek_cols][delta]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_modbus_register_change"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_modbus_register_change"
+        init => "$zeek_modbus_register_change_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'register', 'old_val', 'new_val', 'delta' ]"
+        code => "event.set('[zeek_cols]', $zeek_modbus_register_change_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_modbus_register_change"
+      add_field => {
+        "[zeek_cols][service]" => "modbus"
+      }
+    }
+
   } else if ([source] == "mqtt_connect") {
     #############################################################################################################################
     # mqtt_connect.log
-    # https://docs.zeek.org/en/stable/scripts/policy/protocols/mqtt/main.zeek.html
-    # todo: other mqtt logs?
+    # https://docs.zeek.org/en/stable/scripts/policy/protocols/mqtt/main.zeek.html#type-MQTT::ConnectInfo
 
     dissect {
       id => "dissect_zeek_mqtt_connect"
@@ -1142,6 +1200,76 @@ filter {
         "[zeek_cols][service]" => "mqtt"
       }
     }
+
+  } else if ([source] == "mqtt_publish") {
+    #############################################################################################################################
+    # mqtt_publish.log
+    # https://docs.zeek.org/en/stable/scripts/policy/protocols/mqtt/main.zeek.html#type-MQTT::PublishInfo
+
+    dissect {
+      id => "dissect_zeek_mqtt_publish"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][from_client]}	%{[zeek_cols][retain]}	%{[zeek_cols][qos]}	%{[zeek_cols][status]}	%{[zeek_cols][topic]}	%{[zeek_cols][payload]}	%{[zeek_cols][payload_len]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_mqtt_publish"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_mqtt_publish"
+        init => "$zeek_mqtt_publish_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'from_client', 'retain', 'qos', 'status', 'topic', 'payload', 'payload_len' ]"
+        code => "event.set('[zeek_cols]', $zeek_mqtt_publish_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_mqtt_publish"
+      add_field => {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "mqtt"
+      }
+    }
+
+
+  } else if ([source] == "mqtt_subscribe") {
+    #############################################################################################################################
+    # mqtt_subscribe.log
+    # https://docs.zeek.org/en/stable/scripts/policy/protocols/mqtt/main.zeek.html#type-MQTT::SubscribeInfo
+
+    dissect {
+      id => "dissect_zeek_mqtt_subscribe"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][action]}	%{[zeek_cols][topics]}	%{[zeek_cols][qos_levels]}	%{[zeek_cols][granted_qos_level]}	%{[zeek_cols][ack]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_mqtt_subscribe"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_mqtt_subscribe"
+        init => "$zeek_mqtt_subscribe_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'action', 'topics', 'qos_levels', 'granted_qos_level', 'ack' ]"
+        code => "event.set('[zeek_cols]', $zeek_mqtt_subscribe_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_mqtt_subscribe"
+      add_field => {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "mqtt"
+      }
+    }
+
+    mutate { id => "mutate_gsub_zeek_mqtt_subscribe_action"
+             gsub => [ "[zeek_cols][action]", "MQTT::", "" ] }
 
   } else if ([source] == "mysql") {
     #############################################################################################################################
@@ -3316,6 +3444,47 @@ filter {
                merge => { "[zeek][fuid]" => "[@metadata][cert_fuids]" } }
     }
 
+  } else if ([source] == "modbus_register_change") {
+    #############################################################################################################################
+    # modbus_register_change.log specific logic
+
+    dissect {
+      id => "dissect_zeek_modbus_register_change_convert_datatypes"
+      convert_datatype => {
+        "[zeek_modbus_register_change][register]" => "int"
+        "[zeek_modbus_register_change][old_val]" => "int"
+        "[zeek_modbus_register_change][new_val]" => "int"
+        "[zeek_modbus_register_change][delta]" => "float"
+      }
+    }
+
+  } else if ([source] == "mqtt_publish") {
+    #############################################################################################################################
+    # mqtt_publish.log specific logic
+
+    dissect {
+      id => "dissect_zeek_mqtt_publish_convert_payload_len_datatype"
+      convert_datatype => {
+        "[zeek_mqtt_publish][payload_len]" => "int"
+      }
+    }
+
+  } else if ([source] == "mqtt_subscribe") {
+    #############################################################################################################################
+    # mqtt_subscribe.log specific logic
+
+    mutate { id => "mutate_split_zeek_mqtt_subscribe_fields"
+             split => { "[zeek_mqtt_subscribe][topics]" => ","
+                        "[zeek_mqtt_subscribe][qos_levels]" => "," } }
+
+    dissect {
+      id => "dissect_zeek_mqtt_subscribe_convert_field_datatypes"
+      convert_datatype => {
+        "[mqtt_subscribe][qos_levels]" => "int"
+        "[mqtt_subscribe][granted_qos_level]" => "int"
+      }
+    }
+
   } else if ([source] == "notice") {
     #############################################################################################################################
     # notice.log specific logic
@@ -3349,20 +3518,6 @@ filter {
           "3" => "peer"
           "4" => "broadcast/multicast"
         }
-      }
-    }
-
-    # convert various data types
-    dissect {
-      id => "dissect_convert_datatype_zeek_ntp"
-      convert_datatype => {
-        "[zeek_ntp][mode]" => "int"
-        "[zeek_ntp][num_exts]" => "float"
-        "[zeek_ntp][poll]" => "float"
-        "[zeek_ntp][precision]" => "float"
-        "[zeek_ntp][root_delay]" => "float"
-        "[zeek_ntp][root_disp]" => "float"
-        "[zeek_ntp][version]" => "int"
       }
     }
 
@@ -3425,6 +3580,20 @@ filter {
           match => [ "[zeek_ntp][xmt_time]", "UNIX" ]
           target => "[zeek_ntp][xmt_time]"
         }
+      }
+    }
+
+    # convert various data types
+    dissect {
+      id => "dissect_convert_datatype_zeek_ntp"
+      convert_datatype => {
+        "[zeek_ntp][mode]" => "int"
+        "[zeek_ntp][num_exts]" => "float"
+        "[zeek_ntp][poll]" => "float"
+        "[zeek_ntp][precision]" => "float"
+        "[zeek_ntp][root_delay]" => "float"
+        "[zeek_ntp][root_disp]" => "float"
+        "[zeek_ntp][version]" => "int"
       }
     }
 
@@ -3572,7 +3741,7 @@ filter {
     }
 
     if ([zeek_s7comm][data_info] == "Null") {
-      mutate { id => "mutate_remove_field_s7comm_data_info_Null"
+      mutate { id => "mutate_remove_field_s7comm_data_info_null"
                remove_field => [ "[zeek_s7comm][data_info]" ] }
     } else if ([zeek_s7comm][data_info]) {
       mutate { id => "mutate_split_field_s7comm_data_info"
