more work on new zeek log types

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -1556,7 +1556,7 @@ filter {
       id => "dissect_zeek_radius"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][user]}	%{[zeek_cols][mac]}	%{[zeek_cols][framed_addr]}	%{[zeek_cols][remote_ip]}	%{[zeek_cols][connect_info]}	%{[zeek_cols][reply_msg]}	%{[zeek_cols][result]}	%{[zeek_cols][ttl]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][user]}	%{[zeek_cols][mac]}	%{[zeek_cols][framed_addr]}	%{[zeek_cols][tunnel_client]}	%{[zeek_cols][connect_info]}	%{[zeek_cols][reply_msg]}	%{[zeek_cols][result]}	%{[zeek_cols][ttl]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -1567,7 +1567,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_radius"
-        init => "$zeek_radius_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'user', 'mac', 'framed_addr', 'remote_ip', 'connect_info', 'reply_msg', 'result', 'ttl' ]"
+        init => "$zeek_radius_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'user', 'mac', 'framed_addr', 'tunnel_client', 'connect_info', 'reply_msg', 'result', 'ttl' ]"
         code => "event.set('[zeek_cols]', $zeek_radius_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -3644,9 +3644,9 @@ filter {
       }
     }
 
-    if ([zeek_radius][remote_ip]) {
-      mutate { id => "mutate_merge_zeek_radius_remote_ip"
-               merge => { "[radius][endpointIp]" => "[zeek_radius][remote_ip]" } }
+    if ([zeek_radius][tunnel_client]) {
+      mutate { id => "mutate_merge_zeek_radius_tunnel_client"
+               merge => { "[radius][endpointIp]" => "[zeek_radius][tunnel_client]" } }
       ruby {
         id => "ruby_zeek_radius_endpointIpCnt"
         code => "event.set('[radius][endpointIpCnt]', event.get('[radius][endpointIp]').length)"
