more work on new zeek log types

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -2174,13 +2174,12 @@ filter {
     #############################################################################################################################
     # tds_rpc.log
     # https://github.com/amzn/zeek-plugin-tds/blob/master/scripts/main.zeek
-    # todo: split up/assign parameters field
 
     dissect {
       id => "dissect_zeek_tds_rpc"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][procedure_name]}	%{[zeek_cols][parameters]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][procedure_name]}	%{[zeek_cols][parameter]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -2191,7 +2190,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_tds_rpc"
-        init => "$zeek_tds_rpc_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'procedure_name', 'parameters' ]"
+        init => "$zeek_tds_rpc_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'procedure_name', 'parameter' ]"
         code => "event.set('[zeek_cols]', $zeek_tds_rpc_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -2800,6 +2799,28 @@ filter {
                  event.set('[tcpflags][fin]',     10**(fCnt-1)) if fCnt > 0
                  event.set('[tcpflags][rst]',     10**(rCnt-1)) if rCnt > 0"
       }
+    }
+
+  } else if ([source] == "bacnet") {
+    #############################################################################################################################
+    # bacnet.log specific logic
+
+    if ([zeek_bacnet][data]) {
+      ruby {
+        id => "ruby_zeek_bacnet_parse_data"
+        code => "
+          parameterHash = event.get('[zeek_bacnet][data]').split(',').each_with_object({}) do |a, hash|
+            key,value = a.split(/\s*=\s*/)
+            hash[key] = value
+          end
+          event.set('[zeek_bacnet][data_dict]', parameterHash)"
+      }
+
+      mutate { id => "mutate_split_field_bacnet_data"
+               split => { "[zeek_bacnet][data]" => "," } }
+
+      #if ([zeek_bacnet][data_dict][date]) and ([zeek_bacnet][data_dict][time]) {
+      #}
     }
 
   } else if ([source] == "dhcp") {
@@ -4359,6 +4380,25 @@ filter {
     if ([@metadata][cert_fuids]) {
       mutate { id => "mutate_merge_zeek_ssl_fuids_to_fuid"
                merge => { "[zeek][fuid]" => "[@metadata][cert_fuids]" } }
+    }
+
+  } else if ([source] == "tds_rpc") {
+    #############################################################################################################################
+    # tds_rpc.log specific logic
+
+    if ([zeek_tds_rpc][parameter]) {
+      ruby {
+        id => "ruby_zeek_tds_rpc_parse_parameter"
+        code => "
+          parameterHash = event.get('[zeek_tds_rpc][parameter]').split(',').each_with_object({}) do |a, hash|
+            key,value = a.split(/\s*=\s*/)
+            hash[key.delete_prefix('@')] = value
+          end
+          event.set('[zeek_tds_rpc][parameters]', parameterHash)"
+      }
+
+      mutate { id => "mutate_split_field_tds_rpc_parameter"
+               split => { "[zeek_tds_rpc][parameter]" => "," } }
     }
 
   } else if ([source] == "x509") {
