more work on new parsers (ldap)

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -1104,6 +1104,38 @@ filter {
     mutate { id => "mutate_lowercase_zeek_known_services_service"
              lowercase => [ "[zeek_cols][service]" ] }
 
+  } else if ([source] == "ldap") {
+    #############################################################################################################################
+    # ldap.log
+    # https://github.com/SoftwareConsultingEmporium/ldap-analyzer/blob/master/scripts/main.bro
+
+    dissect {
+      id => "dissect_zeek_ldap"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][message_id]}	%{[zeek_cols][operation]}	%{[zeek_cols][value]}	%{[zeek_cols][entry]}	%{[zeek_cols][result]}	%{[zeek_cols][error]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ldap"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ldap"
+        init => "$zeek_ldap_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'message_id', 'operation', 'value', 'entry', 'result', 'error' ]"
+        code => "event.set('[zeek_cols]', $zeek_ldap_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ldap"
+      add_field => {
+        "[zeek_cols][service]" => "ldap"
+      }
+    }
+
   } else if ([source] == "modbus") {
     #############################################################################################################################
     # modbus.log
@@ -2765,11 +2797,6 @@ filter {
         id => "dissect_convert_datatype_zeek_conn_vlan"
         convert_datatype => {
           "[vlan]" => "int"
-        }
-      }
-      dissect {
-        id => "dissect_convert_datatype_zeek_conn_vlanCnt"
-        convert_datatype => {
           "[vlanCnt]" => "int"
         }
       }
@@ -3463,6 +3490,18 @@ filter {
     if ([@metadata][cert_fuids]) {
       mutate { id => "mutate_merge_zeek_kerberos_fuids_to_fuid"
                merge => { "[zeek][fuid]" => "[@metadata][cert_fuids]" } }
+    }
+
+  } else if ([source] == "ldap") {
+    #############################################################################################################################
+    # ldap.log specific logic
+
+    dissect {
+      id => "dissect_zeek_ldap_convert_datatypes"
+      convert_datatype => {
+        "[zeek_ldap][message_id]" => "int"
+        "[zeek_ldap][result]" => "int"
+      }
     }
 
   } else if ([source] == "modbus_register_change") {
@@ -4572,192 +4611,30 @@ filter {
            rename => { "[source]" => "[zeek][logType]" } }
 
   # set data types for fields that belong to multiple types of logs
-  if ([totBytes]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_totBytes"
-      convert_datatype => {
-        "[totBytes]" => "int"
-      }
-    }
-  }
-
-  if ([srcBytes]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_srcBytes"
-      convert_datatype => {
-        "[srcBytes]" => "int"
-      }
-    }
-  }
-
-  if ([dstBytes]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_dstBytes"
-      convert_datatype => {
-        "[dstBytes]" => "int"
-      }
-    }
-  }
-
-  if ([totDataBytes]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_totDataBytes"
-      convert_datatype => {
-        "[totDataBytes]" => "int"
-      }
-    }
-  }
-
-  if ([srcDataBytes]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_srcDataBytes"
-      convert_datatype => {
-        "[srcDataBytes]" => "int"
-      }
-    }
-  }
-
-  if ([dstDataBytes]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_dstDataBytes"
-      convert_datatype => {
-        "[dstDataBytes]" => "int"
-      }
-    }
-  }
-
-  if ([totPackets]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_totPackets"
-      convert_datatype => {
-        "[totPackets]" => "int"
-      }
-    }
-  }
-
-  if ([srcPackets]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_srcPackets"
-      convert_datatype => {
-        "[srcPackets]" => "int"
-      }
-    }
-  }
-
-  if ([dstPackets]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_dstPackets"
-      convert_datatype => {
-        "[dstPackets]" => "int"
-      }
-    }
-  }
-
-  if ([srcPort]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_srcPort"
-      convert_datatype => {
-        "[srcPort]" => "int"
-      }
-    }
-  }
-
-  if ([dstPort]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_dstPort"
-      convert_datatype => {
-        "[dstPort]" => "int"
-      }
-    }
-  }
-
-  if ([length]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_length"
-      convert_datatype => {
-        "[length]" => "int"
-      }
-    }
-  }
-
-  if ([timestamp]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_timestamp"
-      convert_datatype => {
-        "[timestamp]" => "int"
-      }
-    }
-  }
-
-  if ([firstPacket]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_firstPacket"
-      convert_datatype => {
-        "[firstPacket]" => "int"
-      }
-    }
-  }
-
-  if ([lastPacket]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_lastPacket"
-      convert_datatype => {
-        "[lastPacket]" => "int"
-      }
-    }
-  }
-
-  if ([protocolCnt]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_protocolCnt"
-      convert_datatype => {
-        "[protocolCnt]" => "int"
-      }
-    }
-  }
-
-  if ([ipProtocol]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_ipProtocol"
-      convert_datatype => {
-        "[ipProtocol]" => "int"
-      }
-    }
-  }
-
-  if ([userCnt]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_userCnt"
-      convert_datatype => {
-        "[userCnt]" => "int"
-      }
-    }
-  }
-
-  if ([zeek][fuidCnt]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_fuidCnt"
-      convert_datatype => {
-        "[zeek][fuidCnt]" => "int"
-      }
-    }
-  }
-
-  if ([zeek][filenameCnt]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_filenameCnt"
-      convert_datatype => {
-        "[zeek][filenameCnt]" => "int"
-      }
-    }
-  }
-
-  if ([zeek][filetypeCnt]) {
-    dissect {
-      id => "dissect_convert_datatype_zeek_filetypeCnt"
-      convert_datatype => {
-        "[zeek][filetypeCnt]" => "int"
-      }
+  dissect {
+    id => "dissect_convert_datatype_zeek_misc"
+    convert_datatype => {
+      "[totBytes]" => "int"
+      "[srcBytes]" => "int"
+      "[dstBytes]" => "int"
+      "[totDataBytes]" => "int"
+      "[srcDataBytes]" => "int"
+      "[dstDataBytes]" => "int"
+      "[totPackets]" => "int"
+      "[srcPackets]" => "int"
+      "[dstPackets]" => "int"
+      "[srcPort]" => "int"
+      "[dstPort]" => "int"
+      "[length]" => "int"
+      "[timestamp]" => "int"
+      "[firstPacket]" => "int"
+      "[lastPacket]" => "int"
+      "[protocolCnt]" => "int"
+      "[ipProtocol]" => "int"
+      "[userCnt]" => "int"
+      "[zeek][fuidCnt]" => "int"
+      "[zeek][filenameCnt]" => "int"
+      "[zeek][filetypeCnt]" => "int"
     }
   }
 
