fix some stuff with the ldap parsing

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -1108,12 +1108,13 @@ filter {
     #############################################################################################################################
     # ldap.log
     # https://github.com/SoftwareConsultingEmporium/ldap-analyzer/blob/master/scripts/main.bro
+    # todo: UID doesn't exist in this plugin?
 
     dissect {
       id => "dissect_zeek_ldap"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][message_id]}	%{[zeek_cols][operation]}	%{[zeek_cols][value]}	%{[zeek_cols][entry]}	%{[zeek_cols][result]}	%{[zeek_cols][error]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][message_id]}	%{[zeek_cols][operation]}	%{[zeek_cols][value]}	%{[zeek_cols][entry]}	%{[zeek_cols][result_code]}	%{[zeek_cols][error]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -1124,7 +1125,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_ldap"
-        init => "$zeek_ldap_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'message_id', 'operation', 'value', 'entry', 'result', 'error' ]"
+        init => "$zeek_ldap_field_names = [ 'ts', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'message_id', 'operation', 'value', 'entry', 'result_code', 'error' ]"
         code => "event.set('[zeek_cols]', $zeek_ldap_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -3496,11 +3497,26 @@ filter {
     #############################################################################################################################
     # ldap.log specific logic
 
+    # todo: ldap.authtype, ldap.authtypeCnt, ldap.bindname, ldap.bindnameCnt
+
+    if ([zeek_ldap][result_code]) {
+      translate {
+        id => "translate_zeek_ldap_result"
+        field => "[zeek_ldap][result_code]"
+        destination => "[zeek_ldap][result]"
+        dictionary_path => "/etc/ldap_result_codes.yaml"
+      }
+      if (![zeek_ldap][result]) {
+        mutate { id => "mutate_add_field_zeek_ldap_result_fallback"
+                 add_field => { "[zeek_ldap][result]" => "%{[zeek_ldap][result_code]}" } }
+      }
+    }
+
     dissect {
       id => "dissect_zeek_ldap_convert_datatypes"
       convert_datatype => {
         "[zeek_ldap][message_id]" => "int"
-        "[zeek_ldap][result]" => "int"
+        "[zeek_ldap][result_code]" => "int"
       }
     }
 
