--- a/logstash/pipeline-main/18_tags_finalize.conf
+++ b/logstash/pipeline-main/18_tags_finalize.conf
@@ -12,8 +12,8 @@ filter {
   # deduplicate tags
 
   ruby {
-    id => "ruby_zeek_tags_deduplicate"
-    code => "event.set('[tags]', event.get('[tags]').uniq)"
+    id => "ruby_zeek_tags_clean_and_deduplicate"
+    code => "event.set('[tags]', event.get('[tags]').select{|i| !(i.start_with?('_dataconversion'))}.uniq)"
   }
 
   # count tags (for moloch)
