use ZeroMQ-based approach for file scanning queue (#73)
* working on a new method for doing the file carving stuff

* maybe working now

* fix supervisor options

* comments

* fix dockerfile

* put a sleep in the main loopp so our CPUs don't melt

* fix annoying clipit history clear timeout in ISO

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -3836,7 +3836,7 @@ filter {
     # signatures.log specific logic
 
     if ("_carved" in [tags]) {
-      # we're doing some "special" stuff in zeek-carve-monitor.py for file carving, sort of hijacking signatures.log for it
+      # Malcolm does some "special" stuff in zeek_carve_logger.py for file carving, sort of hijacking signatures.log for it
 
       if ([zeek_signatures][sub_message]) {
         # sub_message contains fuid(s) comma-separated
