--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -16,14 +16,29 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
 
-[program:zeek-carve-monitor]
-command=/usr/local/bin/zeek-carve-monitor.py
+[program:watcher]
+command=/usr/local/bin/zeek_carve_watcher.py
   --verbose %(ENV_EXTRACTED_FILE_VERBOSE)s
-  --preserve %(ENV_EXTRACTED_FILE_PRESERVATION)s
+  --start-sleep %(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
   --ignore-existing %(ENV_EXTRACTED_FILE_IGNORE_EXISTING)s
-  --start-sleep %(ENV_EXTRACTED_FILE_START_SLEEP)s
   --min-bytes %(ENV_EXTRACTED_FILE_MIN_BYTES)s
   --max-bytes %(ENV_EXTRACTED_FILE_MAX_BYTES)s
+  --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
+user=monitor
+autostart=true
+startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
+startretries=0
+stopasgroup=true
+killasgroup=true
+directory=/data/zeek/extract_files
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:scanner]
+command=/usr/local/bin/zeek_carve_scanner.py
+  --verbose %(ENV_EXTRACTED_FILE_VERBOSE)s
+  --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --vtot-api %(ENV_VTOT_API2_KEY)s
   --vtot-req-limit %(ENV_VTOT_REQUESTS_PER_MINUTE)s
   --malass-host "%(ENV_MALASS_HOST)s"
@@ -31,11 +46,27 @@ command=/usr/local/bin/zeek-carve-monitor.py
   --malass-limit %(ENV_MALASS_MAX_REQUESTS)s
   --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
   --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
+user=monitor
+autostart=true
+startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
+startretries=0
+stopasgroup=true
+killasgroup=true
+directory=/data/zeek/extract_files
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:logger]
+command=/usr/local/bin/zeek_carve_logger.py
+  --verbose %(ENV_EXTRACTED_FILE_VERBOSE)s
+  --start-sleep %(ENV_EXTRACTED_FILE_LOGGER_START_SLEEP)s
+  --preserve %(ENV_EXTRACTED_FILE_PRESERVATION)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
   --zeek-log "%(ENV_ZEEK_LOG_DIRECTORY)s"
 user=monitor
 autostart=true
-startsecs=%(ENV_EXTRACTED_FILE_START_SLEEP)s
+startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
 killasgroup=true
