added human-readable names to types created with Moloch WISE

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -3680,14 +3680,20 @@ filter {
     mutate { id => "mutate_split_zeek_pe_section_names"
              split => { "[zeek_pe][section_names]" => "," } }
 
+
     if ([zeek_pe][compile_ts]) {
-      date {
-        id => "date_zeek_pe_compile_ts"
-        match => [ "[zeek_pe][compile_ts]", "UNIX" ]
-        target => "[@metadata][pe_time]"
+     if ([zeek_pe][compile_ts] == "0.000000") {
+       mutate {
+         id => "mutate_remove_field_pe_compile_ts_zero"
+         remove_field => [ "[zeek_pe][compile_ts]" ]
+       }
+    } else {
+       date {
+          id => "date_zeek_pe_compile_ts"
+          match => [ "[zeek_pe][compile_ts]", "UNIX" ]
+          target => "[zeek_pe][compile_ts]"
+        }
       }
-      if ([@metadata][pe_time]) { mutate { id => "mutate_replace_zeek_pe_compile_ts"
-                                    replace => { "[zeek_pe][compile_ts]" => "%{[@metadata][pe_time]}" } } }
     }
 
     # collect all FUIDs under the parent [zeek][fuid] array
@@ -3797,6 +3803,13 @@ filter {
                  merge => { "[radius][endpointGEO]" => "[@metadata][radius_geo][country_code2]" } }
       }
     }
+
+  } else if ([source] == "rdp") {
+    #############################################################################################################################
+    # rdp.log specific logic
+
+    mutate { id => "mutate_split_zeek_rdp_client_channels"
+             split => { "[zeek_rdp][client_channels]" => "," } }
 
   } else if ([source] == "s7comm") {
     #############################################################################################################################
@@ -4035,6 +4048,8 @@ filter {
              split => { "[zeek_smtp][to]" => "," } }
     mutate { id => "mutate_split_zeek_smtp_cc"
              split => { "[zeek_smtp][cc]" => "," } }
+    mutate { id => "mutate_split_zeek_smtp_path"
+             split => { "[zeek_smtp][path]" => "," } }
 
     # collect all FUIDs under the parent [zeek][fuid] array
     if ([zeek_smtp][fuids]) {
