first pass at integrating changes

--- a/htadmin/src/config/config_example.ini
+++ b/htadmin/src/config/config_example.ini
@@ -1,24 +1,24 @@
-; Gotcha! -> PHP 7.0.0 	Hash marks (#) are no longer recognized as comments.
-
 ; HTAdmin config file.
 ; Important: secure this file from access!
 [application]
 ; Change this to customize your title:
-app_title = HTAdmin
+;app_title = HTAdmin
 
 ; htpasswd file
 secure_path  = ../htpasswd
 ; metadata file
 metadata_path  = ../metadata
 
-; Default password = admin
-; Change this for live!
+; administrator username
 admin_user = admin
-admin_pwd_hash = $2y$10$Js3pNhQ9KgRjaGLBzeh.fe.tJ4eaLNd3AHpgc7YA5oH9yripLoOTi
+; The admin_pwd_hash is now stored in the 'htpasswd' file (like the other usernames)
 
-; Password reset mail via smtp:
-mail_from = something@somewhere
-mail_from_name = HTAdmin
-mail_user = smtpuser@somewhere
-mail_pwd  = xxxx
-mail_server = localhost
+; username field quality checks
+;
+min_username_len = 4
+max_username_len = 12
+
+; Password field quality checks
+;
+min_password_len = 6
+max_password_len = 20
