--- a/logstash/pipelines/external/99_elastic_output.conf
+++ b/logstash/pipelines/external/99_elastic_output.conf
@@ -4,8 +4,8 @@ output {
     hosts => "${ES_EXTERNAL_HOSTS}"
     ssl => "${ES_EXTERNAL_SSL:true}"
     ssl_certificate_verification => "${ES_EXTERNAL_SSL_CERTIFICATE_VERIFICATION:false}"
-    user => "${ES_EXTERNAL_USER}"
-    password => "${ES_EXTERNAL_PASSWORD}"
+    user => "${ES_EXTERNAL_USER:}"
+    password => "${ES_EXTERNAL_PASSWORD:}"
     manage_template => false
     index => "sessions2-%{+YYMMdd}"
     document_id => "%{+YYMMdd}-%{zeekLogDocId}"
