--- a/logstash/pipelines/enrichment/99_elastic_forward.conf
+++ b/logstash/pipelines/enrichment/99_elastic_forward.conf
@@ -1,5 +1,5 @@
 output {
   pipeline {
-    send_to => [${MALCOLM_ELASTICSEARCH_OUTPUT_PIPELINES:"internal-es"}]
+    send_to => [_MALCOLM_ELASTICSEARCH_OUTPUT_PIPELINES_]
   }
 }
