--- a/logstash/pipelines/input/99_input_forward.conf
+++ b/logstash/pipelines/input/99_input_forward.conf
@@ -1,6 +1,5 @@
 output {
   pipeline {
-    send_to => [${MALCOLM_PARSE_PIPELINE_ADDRESSES:"zeek-parse"}]
+    send_to => [_MALCOLM_PARSE_PIPELINE_ADDRESSES_]
   }
 }
-
