fix geoip plugin calls to take a single value instead of an array

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -213,12 +213,12 @@ filter {
     }
   } # if ([dstIp])
 
-  # if this is a DNS record with an IP, GeoIP it as well
-  if ([dns][ip]) {
+  if ([dns][ip]) and ([dns][ip][0]) {
+    # if this is a DNS record with an IP, GeoIP it as well
     geoip {
       id => "geoip_dns_ip_asn"
       default_database_type => "ASN"
-      source => "[dns][ip]"
+      source => "[dns][ip][0]"
       target => "[@metadata][dns_asn]"
     }
     if ([@metadata][dns_asn] and [@metadata][dns_asn][as_org] and [@metadata][dns_asn][asn]) {
@@ -231,7 +231,7 @@ filter {
 
     geoip {
       id => "geoip_dns_ip_geo"
-      source => "[dns][ip]"
+      source => "[dns][ip][0]"
       target => "[@metadata][dns_geo]"
     }
     if ([@metadata][dns_geo] and [@metadata][dns_geo][country_code2]) {
@@ -240,53 +240,57 @@ filter {
     }
   } # end if dns.ip
 
-  # if this is a Radius record with IP addresses, GeoIP them as well
-  if ([radius][framedIp]) {
-    geoip {
-      default_database_type => "ASN"
-      source => "[radius][framedIp]"
-      target => "[@metadata][radius_asn]"
-    }
-    if ([@metadata][radius_asn] and [@metadata][radius_asn][as_org] and [@metadata][radius_asn][asn]) {
-      # this is stupid, the %{} doesn't seem to be liked by mutate.merge
-      mutate { id => "mutate_add_field_radius_asn"
-               add_field => { "[@metadata][asn_str]" => "AS%{[@metadata][radius_asn][asn]} %{[@metadata][radius_asn][as_org]}" } }
-      mutate { id => "mutate_merge_radius_asn"
-               merge => { "[radius][framedASN]" => "[@metadata][asn_str]" } }
-    }
-    geoip {
-      source => "[radius][framedIp]"
-      target => "[@metadata][radius_geo]"
-    }
-    if ([@metadata][radius_geo] and [@metadata][radius_geo][country_code2]) {
-      mutate { id => "mutate_merge_radius_geo"
-               merge => { "[radius][framedGEO]" => "[@metadata][radius_geo][country_code2]" } }
-    }
-  } # end if radius.framedIp
+  if ([radius]) {
 
-  if ([radius][endpointIp]) {
-    geoip {
-      default_database_type => "ASN"
-      source => "[radius][endpointIp]"
-      target => "[@metadata][radius_asn]"
-    }
-    if ([@metadata][radius_asn] and [@metadata][radius_asn][as_org] and [@metadata][radius_asn][asn]) {
-      # this is stupid, the %{} doesn't seem to be liked by mutate.merge
-      mutate { id => "mutate_add_field_radius_endpoint_asn"
-               add_field => { "[@metadata][asn_str]" => "AS%{[@metadata][radius_asn][asn]} %{[@metadata][radius_asn][as_org]}" } }
-      mutate { id => "mutate_merge_radius_endpoint_asn"
-               merge => { "[radius][endpointASN]" => "[@metadata][asn_str]" } }
-    }
+    # if this is a Radius record with IP addresses, GeoIP them as well
+    if ([radius][framedIp]) and ([radius][framedIp][0]) {
+      geoip {
+        default_database_type => "ASN"
+        source => "[radius][framedIp][0]"
+        target => "[@metadata][radius_asn]"
+      }
+      if ([@metadata][radius_asn] and [@metadata][radius_asn][as_org] and [@metadata][radius_asn][asn]) {
+        # this is stupid, the %{} doesn't seem to be liked by mutate.merge
+        mutate { id => "mutate_add_field_radius_asn"
+                 add_field => { "[@metadata][asn_str]" => "AS%{[@metadata][radius_asn][asn]} %{[@metadata][radius_asn][as_org]}" } }
+        mutate { id => "mutate_merge_radius_asn"
+                 merge => { "[radius][framedASN]" => "[@metadata][asn_str]" } }
+      }
+      geoip {
+        source => "[radius][framedIp][0]"
+        target => "[@metadata][radius_geo]"
+      }
+      if ([@metadata][radius_geo] and [@metadata][radius_geo][country_code2]) {
+        mutate { id => "mutate_merge_radius_geo"
+                 merge => { "[radius][framedGEO]" => "[@metadata][radius_geo][country_code2]" } }
+      }
+    } # end if radius.framedIp
 
-    geoip {
-      source => "[radius][endpointIp]"
-      target => "[@metadata][radius_geo]"
-    }
-    if ([@metadata][radius_geo] and [@metadata][radius_geo][country_code2]) {
-      mutate { id => "mutate_merge_radius_endpoint_geo"
-               merge => { "[radius][endpointGEO]" => "[@metadata][radius_geo][country_code2]" } }
-    }
-  }
+    if ([radius][endpointIp]) and ([radius][endpointIp][0]) {
+      geoip {
+        default_database_type => "ASN"
+        source => "[radius][endpointIp][0]"
+        target => "[@metadata][radius_asn]"
+      }
+      if ([@metadata][radius_asn] and [@metadata][radius_asn][as_org] and [@metadata][radius_asn][asn]) {
+        # this is stupid, the %{} doesn't seem to be liked by mutate.merge
+        mutate { id => "mutate_add_field_radius_endpoint_asn"
+                 add_field => { "[@metadata][asn_str]" => "AS%{[@metadata][radius_asn][asn]} %{[@metadata][radius_asn][as_org]}" } }
+        mutate { id => "mutate_merge_radius_endpoint_asn"
+                 merge => { "[radius][endpointASN]" => "[@metadata][asn_str]" } }
+      }
+
+      geoip {
+        source => "[radius][endpointIp][0]"
+        target => "[@metadata][radius_geo]"
+      }
+      if ([@metadata][radius_geo] and [@metadata][radius_geo][country_code2]) {
+        mutate { id => "mutate_merge_radius_endpoint_geo"
+                 merge => { "[radius][endpointGEO]" => "[@metadata][radius_geo][country_code2]" } }
+      }
+    } # end if radius.endpointIp
+
+  } # end if radius
 
   ################################################################################################
 
